--- a/src/main/plugin/iso19139.sinp/templates/dispositif.xml
+++ b/src/main/plugin/iso19139.sinp/templates/dispositif.xml
@@ -2,9 +2,8 @@
                  xmlns:gts="http://www.isotc211.org/2005/gts"
                  xmlns:gco="http://www.isotc211.org/2005/gco"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
-                 xmlns:geonet="http://www.fao.org/geonetwork"
-                 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                 xsi:schemaLocation="http://www.isotc211.org/2005/gmd http://www.isotc211.org/2005/gmd/gmd.xsd http://www.isotc211.org/2005/srv http://schemas.opengis.net/iso/19139/20060504/srv/srv.xsd">
+                 xmlns:sinp="http://inventaire.naturefrance.fr/schemas/2.0"
+                 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <gmd:fileIdentifier>
       <gco:CharacterString>461ec9d0-60e6-4872-b4e5-e517645120be</gco:CharacterString>
    </gmd:fileIdentifier>
@@ -20,7 +19,7 @@
                         codeListValue="dispositifDeCollecte"/>
    </gmd:hierarchyLevel>
    <gmd:contact>
-      <gmd:CI_ResponsibleParty>
+      <sinp:CI_ResponsibleParty gco:isoType="gmd:CI_ResponsibleParty">
          <gmd:individualName gco:nilReason="missing">
             <gco:CharacterString/>
          </gmd:individualName>
@@ -70,13 +69,13 @@
             <gmd:CI_RoleCode codeListValue="pointOfContact"
                              codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#CI_RoleCode"/>
          </gmd:role>
-      </gmd:CI_ResponsibleParty>
+      </sinp:CI_ResponsibleParty>
   </gmd:contact>
    <gmd:dateStamp>
       <gco:DateTime>2015-11-27T17:42:46</gco:DateTime>
    </gmd:dateStamp>
    <gmd:metadataStandardName>
-      <gco:CharacterString>ISO 19115:2003/19139</gco:CharacterString>
+      <gco:CharacterString>ISO 19115:2003/19139 - Profil SINP</gco:CharacterString>
    </gmd:metadataStandardName>
    <gmd:metadataStandardVersion>
       <gco:CharacterString>1.0</gco:CharacterString>
@@ -111,7 +110,7 @@
                                  codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#MD_ProgressCode"/>
          </gmd:status>
          <gmd:pointOfContact>
-            <gmd:CI_ResponsibleParty>
+            <sinp:CI_ResponsibleParty gco:isoType="gmd:CI_ResponsibleParty">
                <gmd:individualName gco:nilReason="missing">
                   <gco:CharacterString/>
                </gmd:individualName>
@@ -161,7 +160,7 @@
                   <gmd:CI_RoleCode codeListValue="originator"
                                    codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#CI_RoleCode"/>
                </gmd:role>
-            </gmd:CI_ResponsibleParty>
+            </sinp:CI_ResponsibleParty>
          </gmd:pointOfContact>
          <gmd:resourceMaintenance>
             <gmd:MD_MaintenanceInformation>
