--- a/src/main/plugin/iso19139.sinp/templates/jeudedonnees.xml
+++ b/src/main/plugin/iso19139.sinp/templates/jeudedonnees.xml
@@ -2,9 +2,8 @@
                  xmlns:gts="http://www.isotc211.org/2005/gts"
                  xmlns:gco="http://www.isotc211.org/2005/gco"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
-                 xmlns:geonet="http://www.fao.org/geonetwork"
-                 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-                 xsi:schemaLocation="http://www.isotc211.org/2005/gmd http://www.isotc211.org/2005/gmd/gmd.xsd http://www.isotc211.org/2005/srv http://schemas.opengis.net/iso/19139/20060504/srv/srv.xsd">
+                 xmlns:sinp="http://inventaire.naturefrance.fr/schemas/2.0"
+                 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
    <gmd:fileIdentifier>
       <gco:CharacterString>3ca6ba40-fdcd-4de2-8d5a-2ed714e2a721</gco:CharacterString>
    </gmd:fileIdentifier>
@@ -20,7 +19,7 @@
                         codeListValue="dataset"/>
    </gmd:hierarchyLevel>
    <gmd:contact>
-      <gmd:CI_ResponsibleParty>
+      <sinp:CI_ResponsibleParty gco:isoType="gmd:CI_ResponsibleParty">
          <gmd:individualName gco:nilReason="missing">
             <gco:CharacterString/>
          </gmd:individualName>
@@ -70,13 +69,13 @@
             <gmd:CI_RoleCode codeListValue="pointOfContact"
                              codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#CI_RoleCode"/>
          </gmd:role>
-      </gmd:CI_ResponsibleParty>
+      </sinp:CI_ResponsibleParty>
   </gmd:contact>
    <gmd:dateStamp>
       <gco:DateTime>2015-11-27T17:47:44</gco:DateTime>
    </gmd:dateStamp>
    <gmd:metadataStandardName>
-      <gco:CharacterString>ISO 19115:2003/19139</gco:CharacterString>
+      <gco:CharacterString>ISO 19115:2003/19139 - Profil SINP</gco:CharacterString>
    </gmd:metadataStandardName>
    <gmd:metadataStandardVersion>
       <gco:CharacterString>1.0</gco:CharacterString>
@@ -152,7 +151,7 @@
                                  codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#MD_ProgressCode"/>
          </gmd:status>
          <gmd:pointOfContact>
-            <gmd:CI_ResponsibleParty>
+            <sinp:CI_ResponsibleParty gco:isoType="gmd:CI_ResponsibleParty">
                <gmd:individualName gco:nilReason="missing">
                   <gco:CharacterString/>
                </gmd:individualName>
@@ -202,7 +201,7 @@
                   <gmd:CI_RoleCode codeListValue="originator"
                                    codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#CI_RoleCode"/>
                </gmd:role>
-            </gmd:CI_ResponsibleParty>
+            </sinp:CI_ResponsibleParty>
          </gmd:pointOfContact>
          <gmd:resourceMaintenance>
             <gmd:MD_MaintenanceInformation>
@@ -442,7 +441,7 @@
          <gmd:distributor>
             <gmd:MD_Distributor>
                <gmd:distributorContact>
-                  <gmd:CI_ResponsibleParty>
+                  <sinp:CI_ResponsibleParty>
                      <gmd:organisationName gco:nilReason="missing">
                         <gco:CharacterString/>
                      </gmd:organisationName>
@@ -461,7 +460,7 @@
                         <gmd:CI_RoleCode codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#CI_RoleCode"
                                          codeListValue="distributor"/>
                      </gmd:role>
-                  </gmd:CI_ResponsibleParty>
+                  </sinp:CI_ResponsibleParty>
                </gmd:distributorContact>
                <gmd:distributionOrderProcess>
                   <gmd:MD_StandardOrderProcess>
