--- a/src/main/plugin/iso19139.sinp/templates/dispositif.xml
+++ b/src/main/plugin/iso19139.sinp/templates/dispositif.xml
@@ -1,9 +1,11 @@
-<gmd:MD_Metadata xmlns:gmd="http://www.isotc211.org/2005/gmd" xmlns:gml="http://www.opengis.net/gml"
+<gmd:MD_Metadata xmlns:gmd="http://www.isotc211.org/2005/gmd"
+                 xmlns:gml="http://www.opengis.net/gml"
                  xmlns:gts="http://www.isotc211.org/2005/gts"
                  xmlns:gco="http://www.isotc211.org/2005/gco"
                  xmlns:xlink="http://www.w3.org/1999/xlink"
                  xmlns:sinp="http://inventaire.naturefrance.fr/schemas/2.0"
-                 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+                 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+                 xmlns:geonet="http://www.fao.org/geonetwork">
    <gmd:fileIdentifier>
       <gco:CharacterString>461ec9d0-60e6-4872-b4e5-e517645120be</gco:CharacterString>
    </gmd:fileIdentifier>
@@ -13,7 +15,7 @@
    <gmd:characterSet>
       <gmd:MD_CharacterSetCode codeListValue="utf8"
                                codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#MD_CharacterSetCode"/>
-  </gmd:characterSet>
+   </gmd:characterSet>
    <gmd:hierarchyLevel>
       <gmd:MD_ScopeCode codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#MD_ScopeCode"
                         codeListValue="dispositifDeCollecte"/>
@@ -70,7 +72,7 @@
                              codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#CI_RoleCode"/>
          </gmd:role>
       </sinp:CI_ResponsibleParty>
-  </gmd:contact>
+   </gmd:contact>
    <gmd:dateStamp>
       <gco:DateTime>2015-11-27T17:42:46</gco:DateTime>
    </gmd:dateStamp>
@@ -168,6 +170,9 @@
                   <gmd:MD_MaintenanceFrequencyCode codeListValue="asNeeded"
                                                    codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#MD_MaintenanceFrequencyCode"/>
                </gmd:maintenanceAndUpdateFrequency>
+               <gmd:maintenanceNote>
+                  <gco:CharacterString/>
+               </gmd:maintenanceNote>
             </gmd:MD_MaintenanceInformation>
          </gmd:resourceMaintenance>
          <gmd:descriptiveKeywords>
@@ -474,6 +479,9 @@
          </gmd:descriptiveKeywords>
          <gmd:descriptiveKeywords>
             <gmd:MD_Keywords>
+               <gmd:keyword>
+                  <gco:CharacterString>A préciser</gco:CharacterString>
+               </gmd:keyword>
                <gmd:type>
                   <gmd:MD_KeywordTypeCode codeList="http://www.isotc211.org/2005/resources/codeList.xml#MD_KeywordTypeCode"
                                           codeListValue="theme"/>
@@ -588,7 +596,7 @@
             </gmd:MD_DigitalTransferOptions>
          </gmd:transferOptions>
       </gmd:MD_Distribution>
-  </gmd:distributionInfo>
+   </gmd:distributionInfo>
    <gmd:dataQualityInfo>
       <gmd:DQ_DataQuality>
          <gmd:scope>
@@ -653,5 +661,5 @@
             </gmd:LI_Lineage>
          </gmd:lineage>
       </gmd:DQ_DataQuality>
-  </gmd:dataQualityInfo>
+   </gmd:dataQualityInfo>
 </gmd:MD_Metadata>
