--- a/src/main/plugin/iso19139.sinp/templates/jeudedonnees.xml
+++ b/src/main/plugin/iso19139.sinp/templates/jeudedonnees.xml
@@ -103,9 +103,12 @@
       <gmd:MD_DataIdentification>
          <gmd:citation>
             <gmd:CI_Citation>
-               <gmd:title>
+                <gmd:title>
                   <gco:CharacterString>Modèle de saisir pour un jeu de données</gco:CharacterString>
-               </gmd:title>
+                </gmd:title>
+                <gmd:alternateTitle>
+                    <gco:CharacterString>Nom usuel</gco:CharacterString>
+                </gmd:alternateTitle>
                <gmd:date>
                   <gmd:CI_Date>
                      <gmd:date>
@@ -385,24 +388,34 @@
          </gmd:descriptiveKeywords>
          <gmd:descriptiveKeywords>
             <gmd:MD_Keywords>
-               <gmd:keyword>
-                  <gco:CharacterString>Type de données - Liste à préciser</gco:CharacterString>
-               </gmd:keyword>
                <gmd:type>
-                  <gmd:MD_KeywordTypeCode codeList="" codeListValue="theme"/>
+                  <gmd:MD_KeywordTypeCode codeList="http://www.isotc211.org/2005/resources/codeList.xml#MD_KeywordTypeCode"
+                                          codeListValue="theme"/>
                </gmd:type>
                <gmd:thesaurusName>
                   <gmd:CI_Citation>
                      <gmd:title>
-                        <gco:CharacterString>Type de données</gco:CharacterString>
+                        <gco:CharacterString>Type de données SINP</gco:CharacterString>
                      </gmd:title>
                      <gmd:date>
                         <gmd:CI_Date>
+                           <gmd:date>
+                              <gco:Date>2015-11-27</gco:Date>
+                           </gmd:date>
                            <gmd:dateType>
-                              <gmd:CI_DateTypeCode codeList="" codeListValue=""/>
+                              <gmd:CI_DateTypeCode codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#CI_DateTypeCode"
+                                                   codeListValue="publication"/>
                            </gmd:dateType>
                         </gmd:CI_Date>
                      </gmd:date>
+                     <gmd:identifier>
+                        <gmd:MD_Identifier>
+                           <gmd:code>
+                              <gmx:Anchor xmlns:gmx="http://www.isotc211.org/2005/gmx"
+                                          xlink:href="http://localhost:8080/geonetwork/srv/eng/thesaurus.download?ref=external.theme.sinp-type-de-donnees">geonetwork.thesaurus.external.theme.sinp-type-de-donnees</gmx:Anchor>
+                           </gmd:code>
+                        </gmd:MD_Identifier>
+                     </gmd:identifier>
                   </gmd:CI_Citation>
                </gmd:thesaurusName>
             </gmd:MD_Keywords>
@@ -417,6 +430,80 @@
                </gmd:type>
             </gmd:MD_Keywords>
          </gmd:descriptiveKeywords>
+          <gmd:descriptiveKeywords>
+              <gmd:MD_Keywords>
+                  <gmd:keyword gco:nilReason="missing">
+                      <gco:CharacterString/>
+                  </gmd:keyword>
+                  <gmd:type>
+                      <gmd:MD_KeywordTypeCode codeList="http://www.isotc211.org/2005/resources/codeList.xml#MD_KeywordTypeCode"
+                                              codeListValue="theme"/>
+                  </gmd:type>
+                  <gmd:thesaurusName>
+                      <gmd:CI_Citation>
+                          <gmd:title>
+                              <gco:CharacterString>Type de plan d'échantillonnage</gco:CharacterString>
+                          </gmd:title>
+                          <gmd:date>
+                              <gmd:CI_Date>
+                                  <gmd:date>
+                                      <gco:Date>2015-11-27</gco:Date>
+                                  </gmd:date>
+                                  <gmd:dateType>
+                                      <gmd:CI_DateTypeCode codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#CI_DateTypeCode"
+                                                           codeListValue="publication"/>
+                                  </gmd:dateType>
+                              </gmd:CI_Date>
+                          </gmd:date>
+                          <gmd:identifier>
+                              <gmd:MD_Identifier>
+                                  <gmd:code>
+                                      <gmx:Anchor xmlns:gmx="http://www.isotc211.org/2005/gmx"
+                                                  xlink:href="http://localhost:8080/geonetwork/srv/fre/thesaurus.download?ref=external.theme.sinp-plan-d-echantillonnage">geonetwork.thesaurus.external.theme.sinp-plan-d-echantillonnage</gmx:Anchor>
+                                  </gmd:code>
+                              </gmd:MD_Identifier>
+                          </gmd:identifier>
+                      </gmd:CI_Citation>
+                  </gmd:thesaurusName>
+              </gmd:MD_Keywords>
+          </gmd:descriptiveKeywords>
+          <gmd:descriptiveKeywords>
+              <gmd:MD_Keywords>
+                  <gmd:keyword gco:nilReason="missing">
+                      <gco:CharacterString/>
+                  </gmd:keyword>
+                  <gmd:type>
+                      <gmd:MD_KeywordTypeCode codeList="http://www.isotc211.org/2005/resources/codeList.xml#MD_KeywordTypeCode"
+                                              codeListValue="theme"/>
+                  </gmd:type>
+                  <gmd:thesaurusName>
+                      <gmd:CI_Citation>
+                          <gmd:title>
+                              <gco:CharacterString>Type d'unité d'échantillonnage</gco:CharacterString>
+                          </gmd:title>
+                          <gmd:date>
+                              <gmd:CI_Date>
+                                  <gmd:date>
+                                      <gco:Date>2015-11-27</gco:Date>
+                                  </gmd:date>
+                                  <gmd:dateType>
+                                      <gmd:CI_DateTypeCode codeList="http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/resources/codelist/ML_gmxCodelists.xml#CI_DateTypeCode"
+                                                           codeListValue="publication"/>
+                                  </gmd:dateType>
+                              </gmd:CI_Date>
+                          </gmd:date>
+                          <gmd:identifier>
+                              <gmd:MD_Identifier>
+                                  <gmd:code>
+                                      <gmx:Anchor xmlns:gmx="http://www.isotc211.org/2005/gmx"
+                                                  xlink:href="http://localhost:8080/geonetwork/srv/fre/thesaurus.download?ref=external.theme.sinp-type-d-unites-echantillonnage">geonetwork.thesaurus.external.theme.sinp-type-d-unites-echantillonnage</gmx:Anchor>
+                                  </gmd:code>
+                              </gmd:MD_Identifier>
+                          </gmd:identifier>
+                      </gmd:CI_Citation>
+                  </gmd:thesaurusName>
+              </gmd:MD_Keywords>
+          </gmd:descriptiveKeywords>
          <gmd:descriptiveKeywords>
             <gmd:MD_Keywords>
                <gmd:type>
